samples/_failures_safe/1761180505_0e8a4c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0b1948f4.c: In function ‘main’:
./samples/SAFE/__tmp_0b1948f4.c:147:25: error: expected ‘)’ at end of input
  147 |     add_edge(&g, 4, 5, 3
      |             ~           ^
      |                         )
./samples/SAFE/__tmp_0b1948f4.c:147:5: error: expected declaration or statement at end of input
  147 |     add_edge(&g, 4, 5, 3
      |     ^~~~~~~~
